# itb-python

./: .gitignore  README.md  build.sh  pyproject.toml  run_bench.sh  run_tests.sh
easy/benchmarks/: BENCH.md  README.md  _common.py  bench_single.py  bench_triple.py
eitb/: __init__.py  eitb.py
itb/: __init__.py  _ffi.py  blob.py  easy.py  streams.py  wrapper.py
tests/: test_aescmac.py  test_areion.py  test_attach_lock_seed.py  test_auth.py  test_blake2b.py  test_blake2s.py  test_blake3.py  test_blob.py  test_chacha20.py  test_easy_streams_auth.py  test_nonce_sizes.py  test_persistence.py  test_roundtrip.py  test_siphash24.py  test_streams.py  test_streams_auth.py  test_wrapper.py
tests/easy/: test_aescmac.py  test_areion.py  test_auth.py  test_blake2b.py  test_blake2s.py  test_blake3.py  test_chacha20.py  test_mixed.py  test_nonce_sizes.py  test_persistence.py  test_roundtrip.py  test_siphash24.py  test_streams.py
wrapper/: BENCH.md  README.md  __init__.py
wrapper/benchmarks/: __init__.py  _common.py  bench_wrapper.py
