[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "itb"
version = "0.1.0"
description = "Python binding for ITB (information-theoretic barrier) cipher via the libitb shared library"
requires-python = ">=3.9"
dependencies = ["cffi>=1.15"]

[tool.setuptools.packages.find]
where = ["."]
include = ["itb*"]
